Make display title editable
* do not rely 1:1 to the filename upload
* allow to change it afterwards
* filenames might be restricted for special chars
