# src/main/resources/META-INF/openapi.yaml
@@ -107,6 +107,31 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/NotFoundProblem'
+  /own/activities/id/{id}/name:
+    put:
+      operationId: updateActivityName
+      summary: 'Update the display name of an activity'
+      tags:
+        - Activities
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: string
+              example: 'Sunday Morning Ride'
+      responses:
+        '200':
+          description: 'The updated activity.'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ActivityResponse'
+        '404':
+          description: 'Activity with requested ID does not exist'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/NotFoundProblem'
   /own/activities/id/{id}/rate:
     put:
       operationId: rateActivity
